chore: fix overflow scroll in x direction

--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  overflow: hidden;
   width: 100%;
   height: 100%;
   background: #000;
@@ -106,4 +107,8 @@ nav .links p:first-of-type {
 
 .text-box p {
   max-width: 10rem;
+}
+
+.video-wrapper {
+  width: 100dvw;
 }
